# packages

./: .cache  .cz.yaml  .editorconfig  .envrc  .gitignore  .gitlab-ci-sync-tools.yml  .gitlab-ci.yml  .gitmodules  .markdownlint.yaml  .prettierignore  .shellcheckrc  .version-state  .yamllint  2bwm-git  8188eu-aircrack-dkms-git  86box-git  86box-roms-git  CODE_OF_CONDUCT.md  README.md  TODO  abaddon-git  aconfmgr-git  adcli-git  adms-git  adw-gtk-theme-git  adwaita-icon-theme-git  adwaita-qt-git  aegisub-arch1t3cht-git  aelkey-git  agenda-git  agg-2.6-git  ags-hyprpanel-git  airspy-git  airspyhf-git  akira-git  alacritty-git  amber-theme-git  amule-git  ananicy-cpp-git  android_translation_layer-git  (+1003 more)
.ci/: aur-maintainers  aur-state  config  create-pr.sh  deptree.txt  gitlab-clean.sh  lib.state  manage-aur.sh  manual-add.sh  manual-bump.sh  manual-drop.sh  manual-schedule.sh  on-commit.sh  on-schedule.sh  schedule-packages.sh  schedule-params.txt  update-template.sh  util.shlib
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  SECURITY.md
.gitlab/: CODEOWNERS
.tools/: chaotic.sh  update-tools.sh
1password/: .SRCINFO  1password.install  PKGBUILD
2bwm-git/: .AURINFO  .SRCINFO  2bwm.copying  2bwm.desktop  PKGBUILD
64gram-desktop/: .SRCINFO  PKGBUILD
7-zip/: .SRCINFO  PKGBUILD
7-zip-full/: .SRCINFO  PKGBUILD
8188eu-aircrack-dkms-git/: .SRCINFO  PKGBUILD
86box/: .SRCINFO  PKGBUILD
86box-git/: .SRCINFO  PKGBUILD
86box-roms-git/: .SRCINFO  PKGBUILD
CatBuilder/: afternoon.txt  hourly.txt
a2ln/: .SRCINFO  PKGBUILD
abaddon-git/: .SRCINFO  PKGBUILD  abaddon.desktop
abook/: .SRCINFO  PKGBUILD  abook-gcc15.patch
abseil-cpp11/: .SRCINFO  PKGBUILD
absolutely-proprietary/: .SRCINFO  PKGBUILD
acestream-launcher/: .SRCINFO  PKGBUILD
acidrip/: .SRCINFO  PKGBUILD  xvidencopts.patch
aconfmgr-git/: .SRCINFO  PKGBUILD  license.txt
across/: .SRCINFO  .nvchecker.toml  PKGBUILD
activitywatch-bin/: .SRCINFO  Makefile  PKGBUILD  (+1 more)
qcustomplot-qt6/: .SRCINFO  CMakeLists.txt  PKGBUILD  QCustomPlotQt6Config.cmake.in
qcustomplot-qt6/.CI/: config  info
(+18635 files in other folders)
